# rpc-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  justfile
.github/workflows/: clippy-checks.yml  codegen_publish.yml  publish.yml  test.yml
examples/: client.rs  example.md  memory.rs  server.rs
examples/integration/: Cargo.toml  README.md  build.rs  main.rs
examples/integration-multi-lang/: Cargo.toml  README.md  api.proto  build.rs
examples/integration-multi-lang/rpc-client-ts/: api.ts  index.ts  package.json  tsconfig.json
examples/integration-multi-lang/src/: lib.rs  main.rs
examples/integration-multi-lang/src/codegen/: mod.rs  server.rs
examples/integration-multi-lang/src/service/: book_service.rs
examples/integration/codegen/: client.rs  mod.rs  server.rs
examples/integration/service/: api.proto  api.rs  book_service.rs  mod.rs
examples/integration/src/: lib.rs  main.rs  setup_quic.rs
examples/integration/src/codegen/: client.rs  mod.rs  server.rs
examples/integration/src/service/: api.proto  book.proto  book_service.rs
rpc/: Cargo.toml  build.rs
rpc-rust/: Cargo.toml  build.rs
rpc-rust-example/: Cargo.toml  build.rs
rpc-rust-example/src/: main.rs
rpc-rust-example/src/api/: book_service.rs
rpc-rust-example/src/codegen/: mod.rs
rpc-rust/src/: lib.rs  server.rs
rpc-rust/src/protocol/: parse.rs
rpc/src/: client.rs  codegen.rs  lib.rs  messages_handlers.rs  server.rs  service_module_definition.rs  stream_protocol.rs
rpc/src/protocol/: index.proto  mod.rs  parse.rs
rpc/src/rpc_protocol/: index.proto  mod.rs  parse.rs
rpc/src/transports/: error.rs  memory.rs  mod.rs  quic.rs  web_socket.rs
rpc/src/transports/web_sockets/: mod.rs  tungstenite.rs  warp.rs
rpc/src/types/: mod.rs
rpc/tests/: memory_transport.rs
rpc_codegen/: Cargo.toml
rpc_codegen/src/: lib.rs
src/: client.rs  lib.rs  main.rs  server.rs
src/protocol/: index.rs  mod.rs  parse.rs
src/transports/: memory.rs  mod.rs  quic.rs  web_socket.rs
src/types/: mod.rs
tests/: memory_transport.rs  server.rs
