[workspace]
members = [
  "rpc",
  "rpc_codegen",
  "examples/integration",
  "examples/integration-multi-lang"
]

[workspace.dependencies]
async-channel = "1.8.0"
async-trait = "0.1.57"
bytes = "1.3.0"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
log = "0.4.17"
prost = "0.11.5"
tokio = {version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
tokio-tungstenite = "*"
tokio-util = "0.7.4"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
