[package]
name = "rpc-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-rust = { path = "../rpc-rust" }
protobuf = { version = "2.27.1", features = ["with-bytes"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }
async-scoped = { version = "0.7.1", features = ["use-tokio", "tokio"]}

[build-dependencies]
protoc-rust = "2.27.1"