[package]
name = "dcl-rpc"
version = "2.3.2"
edition = "2021"
description = "Decentraland RPC Implementation"
repository = "https://github.com/decentraland/rpc-rust"
keywords = ["rpc", "decentraland", "protobuffer"]
categories = ["web-programming", "web-programming::websocket", "network-programming",]
license = "Apache-2.0"
rust-version = "1.65.0"
readme = "../README.md"

[dependencies]
async-channel = "1.8.0"
async-trait = "0.1.57"
bytes = "1.3.0"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
log = "0.4.17"
prost = "0.11.5"
tokio = {version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"], optional = true }
tokio-util = "0.7.4"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
prost-build = { version = "0.11.5", optional = true }

[build-dependencies]
prost-build = "0.11.5"
protobuf-src = "1.1.0"

[features]
default = ["codegen", "memory", "websockets", "server"]
codegen = ["dep:quote", "dep:prost-build", "dep:proc-macro2"]
memory = []
websockets = ["dep:tokio-tungstenite"]
client = []
server = []
