[package]
name = "dcl-rpc-codegen"
version = "0.1.0"
edition = "2021"
description = "Decentraland RPC Code Generation"
repository = "https://github.com/decentraland/rpc-rust"
keywords = ["rpc", "decentraland", "protobuffer"]
categories = ["web-programming", "web-programming::websocket", "network-programming",]
license = "Apache-2.0"
rust-version = "1.65.0"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = { version = "0.11" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
