[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-rust = { path = "../../"}
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-trait = "0.1.57"
async-channel = "1.8.0"
tokio-util = "0.7.4"
tokio-tungstenite = "*"
bytes = "1.3.0"
prost = "0.11.5"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"

[build-dependencies]
prost-build = "0.11.5"

[[bin]]
name = "integration"
path = "src/main.rs"
