[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcl-rpc = { path = "../../rpc", features = ["quic"] }
futures-channel= { workspace = true }
tokio= { workspace = true }
futures-util= { workspace = true }
async-trait= { workspace = true }
async-channel= { workspace = true }
tokio-util= { workspace = true }
tokio-tungstenite= { workspace = true }
bytes= { workspace = true }
prost= { workspace = true }
quinn= { workspace = true }
rustls= { workspace = true }
rcgen= { workspace = true }

[build-dependencies]
prost-build = "0.11.5"
dcl-rpc = { path = "../../rpc"}


[[bin]]
name = "integration"
path = "src/main.rs"
